--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "catstone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://zahnen.github.io/catstone",
   "dependencies": {
     "@popperjs/core": "^2.9.0",
     "@react-three/drei": "^3.9.0",
@@ -24,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
